frontend/templates/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend 
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: 4suredev/pingo:1.1
        imagePullPolicy: Always
        name: frontend
        ports:
        - name: frontend
          containerPort: 3000
