frontend/templates/frontend-ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: frontend-ingress
spec:
  virtualhost:
    fqdn: localhost
  routes:
    - conditions:
      - prefix: /
      services:
        - name: frontend
          port: 80
